32-network-policy/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: socket-test-first-pod
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: socket-test-second-pod
    - ipBlock:
        cidr: 172.17.0.0/16
    ports:
    - protocol: TCP
      port: 30000
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: socket-test-second-pod
    ports:
    - protocol: TCP
      port: 30000
